# Methys-DS

./: .gitignore  Plan.txt  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
native/: CMakeLists.txt
native/include/methys/: core.h  database.h
native/src/: methys_core.c  methys_database.c
src/methys/: __init__.py  database.py  frontend.py  native.py
tests/: test_frontend.py
