[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methys"
version = "0.1.0"
description = "An orchestrator for Big Data-driven Neurocomputing."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Muhamad Nur Rasyid", email = "nurrasyid186@gmaiil.com" },
]
license = { text = "Apache-2.0" }
dependencies = [
    "pyspark>=3.4.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/methys"]
