[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methys"
version = "0.1.0"
description = "A C-powered data engine with a composable HTML frontend API."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Muhamad Nur Rasyid", email = "nurrasyid186@gmaiil.com" },
]
license = { text = "Apache-2.0" }
dependencies = [
    "typing-extensions>=4.0; python_version < '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/methys"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
